Prevent article page horizontal overflow from sidenotes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -312,6 +312,7 @@ img {
 	width: 100vw;
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	overflow-x: hidden;
 }
 
 .article-grid > * {
